--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ log = "0.4.17"
 anyhow = "1"
 simple_logger = "2.1.0"
 bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }
+no_deadlocks = "1.3.0"
